K8S/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jyothi-deploy
  namespace: jquery
spec:
  selector:
    matchLabels:
      app: jyothi-deploy
  replicas: 5
  template:
    metadata:
      labels:
        app: jyothi-deploy
    spec:
      containers:
      - name: jyothi-deploy
        image: 003669760817.dkr.ecr.us-east-1.amazonaws.com/jyothi-eks:86
        ports:
        - containerPort: 80
