K8S/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jyothi-ingress
  namespace: jquery
spec:
  rules:
  - host: jquery.jyothirreddy.xyz
    http:
      paths:
        path: /
        backend:
          servicename: jyothi-service
            serviceport: 80
